--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,7 +14,7 @@
   float: left;
   margin-right: 10px;
   text-align: center;
-  color: white;
+  color: lightgray;
   font-weight: bold;
   font-size: 1.2em;
   text-transform: uppercase;
@@ -91,10 +91,10 @@
 /* COLORS DUKE, THE COLORS */
 
 /* station */
-.gold-line .capstone { 
+.gold-line .capstone {
   background-color: #ffa700;
 }
-.red-line .capstone { 
+.red-line .capstone {
   background-color: #ff5100;
 }
 .green-line .capstone {
@@ -114,21 +114,21 @@
 .gold-line .time {
   color: #ffa700;
 }
-.gold-line.timebox { 
+.gold-line.timebox {
   border-color: #ffa700;
   background-color: #ffa700;
 }
 .red-line .time {
  color: #ff5100;
 }
-.red-line.timebox { 
+.red-line.timebox {
   border-color: #ff5100;
   background-color: #ff5100;
 }
 .green-line .time {
   color: green;
 }
-.green-line.timebox { 
+.green-line.timebox {
   border-color: green;
   background-color: green;
 }
@@ -160,9 +160,9 @@
     width: 700px;
     margin: 0 auto;
   }
-  .platform-browser .nav-bar-block[nav-bar=leaving], 
+  .platform-browser .nav-bar-block[nav-bar=leaving],
     .platform-browser .pane[nav-view=leaving] {
-    visibility: hidden;
+    visibility: show;
     overflow: hidden;
   }
 }
